// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple update tasks > npm > test fail > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "npm test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Oh noez",
      "success": false,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/rollback",
    Object {
      "cmd": "npm install updtr-test-module-2@2.0.0",
      "success": false,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": false,
    },
  ],
]
`;

exports[`multiple update tasks > npm > test fail > exec args 1`] = `
Array [
  Array [
    "npm install updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
  ],
  Array [
    "npm test",
  ],
  Array [
    "npm install updtr-test-module-2@2.0.0",
  ],
]
`;

exports[`multiple update tasks > npm > test ok > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "npm test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Everything ok",
      "success": true,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": true,
    },
  ],
]
`;

exports[`multiple update tasks > npm > test ok > exec args 1`] = `
Array [
  Array [
    "npm install updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
  ],
  Array [
    "npm test",
  ],
]
`;

exports[`multiple update tasks > yarn > test fail > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "yarn add updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "yarn test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Oh noez",
      "success": false,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/rollback",
    Object {
      "cmd": "yarn add updtr-test-module-2@2.0.0",
      "success": false,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": false,
    },
  ],
]
`;

exports[`multiple update tasks > yarn > test ok > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "yarn add updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "yarn test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Everything ok",
      "success": true,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": true,
    },
  ],
]
`;

exports[`multiple update tasks > yarn > test ok > exec args 1`] = `
Array [
  Array [
    "yarn add updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
  ],
  Array [
    "yarn test",
  ],
]
`;

exports[`multiple update tasks > yarn > test ok > exec args 2`] = `
Array [
  Array [
    "yarn add updtr-test-module-1@2.0.0 updtr-test-module-2@2.1.1",
  ],
  Array [
    "yarn test",
  ],
  Array [
    "yarn add updtr-test-module-2@2.0.0",
  ],
]
`;

exports[`one update task > test fail > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-1@2.0.0",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "npm test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Oh noez",
      "success": false,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": false,
    },
  ],
]
`;

exports[`one update task > test fail > exec args 1`] = `
Array [
  Array [
    "npm install updtr-test-module-1@2.0.0",
  ],
  Array [
    "npm test",
  ],
]
`;

exports[`one update task > test ok > emit args 1`] = `
Array [
  Array [
    "batch-update/start",
    Object {
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/updating",
    Object {
      "cmd": "npm install updtr-test-module-1@2.0.0",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/testing",
    Object {
      "cmd": "npm test",
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/test-result",
    Object {
      "stdout": "Everything ok",
      "success": true,
      "updateTasks": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "updateTo": "2.0.0",
        },
      ],
    },
  ],
  Array [
    "batch-update/end",
    Object {
      "success": true,
    },
  ],
]
`;

exports[`one update task > test ok > exec args 1`] = `
Array [
  Array [
    "npm install updtr-test-module-1@2.0.0",
  ],
  Array [
    "npm test",
  ],
]
`;
